invidious/allow-cloudflared-to-invidious.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cloudflared-to-invidious
  namespace: invidious
spec:
  podSelector:
    matchLabels:
      app: invidious
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: cloudflared
          podSelector:
            matchLabels:
              app: cloudflared
      ports:
        - protocol: TCP
          port: 3000
